Fix wrong `z-index` of sidebar

--- a/source/css/_common/outline/sidebar/sidebar.styl
+++ b/source/css/_common/outline/sidebar/sidebar.styl
@@ -4,7 +4,6 @@
   box-shadow: inset 0 2px 6px black;
   position: fixed;
   top: 0;
-  z-index: $zindex-2;
 
   a, span.exturl {
     border-bottom-color: $black-light;
