--- a/source/css/_schemes/Muse/_sidebar.styl
+++ b/source/css/_schemes/Muse/_sidebar.styl
@@ -32,4 +32,5 @@ if (hexo-config('sidebar.position') == 'right') {
 .sidebar {
   transition: all .4s;
   width: $sidebar-desktop;
+  z-index: $zindex-2;
 }
